:recycle: MDAS-457 REST Ressource, S3Connection, TestCases and Error Handling added.
