# src/main/java/de/muenchen/mobidam/s3/S3RouteBuilder.java
@@ -7,10 +7,12 @@ package de.muenchen.mobidam.s3;
 import de.muenchen.mobidam.Constants;
 import de.muenchen.mobidam.exception.ErrorResponseBuilder;
 import de.muenchen.mobidam.exception.ExceptionRouteBuilder;
+import de.muenchen.mobidam.exception.MobidamException;
 import de.muenchen.mobidam.rest.ErrorResponse;
 import lombok.RequiredArgsConstructor;
 import org.apache.camel.Exchange;
 import org.apache.camel.LoggingLevel;
+import org.apache.camel.ResolveEndpointFailedException;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.aws2.s3.AWS2S3Constants;
 import org.apache.camel.component.aws2.s3.AWS2S3Operations;
@@ -20,8 +22,6 @@ import software.amazon.awssdk.services.s3.model.S3Exception;
 @Component
 @RequiredArgsConstructor
 public class S3RouteBuilder extends RouteBuilder {
-
-    public static final String OPERATION_CREATE_LINK = "direct:createLink";
 
     @Override
     public void configure() {
@@ -34,6 +34,14 @@ public class S3RouteBuilder extends RouteBuilder {
                     var s3Exception = exchange.getProperty(Exchange.EXCEPTION_CAUGHT, S3Exception.class);
                     log.error("Error occurred in route", s3Exception);
                     exchange.getMessage().setBody(ErrorResponseBuilder.build(s3Exception.statusCode(), s3Exception.getClass().getName()));
+                });
+
+        onException(ResolveEndpointFailedException.class)
+                .handled(true)
+                .process(exchange -> {
+                    var s3Exception = exchange.getProperty(Exchange.EXCEPTION_CAUGHT, ResolveEndpointFailedException.class);
+                    log.error("Error occurred in route", s3Exception);
+                    exchange.getMessage().setBody(ErrorResponseBuilder.build(400, s3Exception.getClass().getName()));
                 });
 
         onException(Exception.class)
@@ -53,14 +61,16 @@ public class S3RouteBuilder extends RouteBuilder {
                 .routeId("S3-Operation-Common").routeDescription("S3 Operation Handling")
                 .log(LoggingLevel.DEBUG, Constants.MOBIDAM_LOGGER, "Message received ${header.CamelHttpUrl}")
                 .process("s3OperationWrapper")
-                .toD(String.format("aws2-s3://{{camel.component.aws2-s3.bucket}}?S3Client=#s3Client&operation=${header.%s}&pojoRequest=true",
-                        AWS2S3Constants.S3_OPERATION))
+                .log(String.format("${header.%s} == '%s'", Constants.CAMEL_SERVLET_CONTEXT_PATH, Constants.CAMEL_SERVLET_CONTEXT_PATH_FILES_IN_FOLDER))
+                .choice()
+                    .when().simple(String.format("${header.%s} == '%s'", Constants.CAMEL_SERVLET_CONTEXT_PATH, Constants.CAMEL_SERVLET_CONTEXT_PATH_FILES_IN_FOLDER))
+                        .toD(String.format("aws2-s3://${header.%2$s}?S3Client=#s3Client&operation=${header.%1$s}&pojoRequest=true", AWS2S3Constants.S3_OPERATION, Constants.BUCKET_NAME))
+                    .when().simple(String.format("${header.%s} == '%s'", Constants.CAMEL_SERVLET_CONTEXT_PATH, Constants.CAMEL_SERVLET_CONTEXT_PATH_PRESIGNED_URL))
+                        .toD(String.format("aws2-s3://${header.%s}?accessKey={{camel.component.aws2-s3.access-key}}&secretKey={{camel.component.aws2-s3.secret-key}}&region={{camel.component.aws2-s3.region}}&uriEndpointOverride={{camel.component.aws2-s3.override-endpoint}}&operation=%s", Constants.BUCKET_NAME, AWS2S3Operations.createDownloadLink))
+                    .otherwise()
+                      .throwException(new MobidamException("REST ContextPath not found."))
+                .end()
                 .process("restResponseWrapper");
-
-        from(OPERATION_CREATE_LINK)
-                .routeId("S3-Operation-CreateLink").routeDescription("Execute S3 Create Link Operation")
-                .toD("aws2-s3://{{camel.component.aws2-s3.bucket}}?accessKey={{camel.component.aws2-s3.access-key}}&secretKey={{camel.component.aws2-s3.secret-key}}&region={{camel.component.aws2-s3.region}}&uriEndpointOverride={{camel.component.aws2-s3.override-endpoint}}&operation="
-                        + AWS2S3Operations.createDownloadLink);
 
     }
 
